Fixing responsiveness on mobile using bootstrap

--- a/css/meow.css
+++ b/css/meow.css
@@ -16,3 +16,7 @@ object{
     width: 100%;
     max-height: 300px;
 }
+
+.project-tile{
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
